syntax = "proto3";

package aperture.policy.sync.v1;

import "aperture/policy/language/v1/flowcontrol.proto";
import "aperture/policy/sync/v1/common_attributes.proto";

message FlowRegulatorWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Flow Regulator
  policy.language.v1.FlowRegulator flow_regulator = 2;
}

message FlowRegulatorDynamicConfigWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // FlowRegulatorDynamicConfig is the dynamic configuration for the Flow Regulator.
  policy.language.v1.FlowRegulator.DynamicConfig flow_regulator_dynamic_config = 2;
}

message FlowRegulatorDecisionWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Flow Regulator Decision
  FlowRegulatorDecision flow_regulator_decision = 2;
}

message FlowRegulatorDecision {
  double accept_percentage = 1;
}
